--- a/src-backseat/pt/lsts/httpd/style.css
+++ b/src-backseat/pt/lsts/httpd/style.css
@@ -8,8 +8,13 @@ h1, h2, h3, h4, h5, h6 {
 	color: #FFFFFF;
 	margin: 1em 0 .3em;
 }
+
 p {
 	margin: 1em 0 .3em;
+}
+
+#copytext {
+  font-size: small;
 }
 
 .changed {
